Added progress bar.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
       </div>
     </section>
   </main>
+  
+  <!-- Progress Bar Section fixed at the bottom -->
+  <section id="progress-section">
+    <div id="song-title">No song playing</div>
+    <div id="progress-bar-wrapper">
+      <span id="current-time">0:00</span>
+      <input type="range" id="progress-bar" min="0" value="0">
+      <span id="duration">0:00</span>
+    </div>
+  </section>
+  
   <script src="script.js"></script>
 </body>
 </html>
