--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body class="dark-theme"> <!-- Start in dark mode by default -->
   <header>
     <h1>C418 Music Player</h1>
-    <!-- This toggle can still exist if you want manual switching. 
-         Or remove it if you want permanent dark mode. -->
+    <!-- Theme toggle if you want to switch from dark to light -->
     <button id="theme-toggle">Toggle Theme</button>
   </header>
 
-  <main>
+  <div id="main-container">
     <section id="albums-section">
       <h2>Albums</h2>
       <div id="albums-container"></div>
@@ -23,37 +22,34 @@
     <section id="songs-section">
       <h2 id="album-title">Select an album</h2>
       <input type="text" id="search" placeholder="Search songs..." />
+
       <div id="songs-container"></div>
-    </section>
 
-    <section id="player-section">
-      <div id="now-playing">Nothing playing</div>
-      <audio id="audio"></audio>
-
-      <div id="controls">
-        <button id="prev-btn">Prev</button>
-        <button id="play-btn">Play</button>
-        <button id="next-btn">Next</button>
-      </div>
-
-      <!-- Shuffle/Repeat checkboxes -->
-      <div id="toggles">
-        <label>
-          <input type="checkbox" id="shuffle-checkbox" />
-          Shuffle
-        </label>
-        <label>
-          <input type="checkbox" id="repeat-checkbox" />
-          Repeat
-        </label>
+      <div id="player-section">
+        <div id="now-playing">Nothing playing</div>
+        <audio id="audio"></audio>
+        <div id="controls">
+          <button id="prev-btn">Prev</button>
+          <button id="play-btn">Play</button>
+          <button id="next-btn">Next</button>
+        </div>
+        <div id="toggles">
+          <label>
+            <input type="checkbox" id="shuffle-checkbox" />
+            Shuffle
+          </label>
+          <label>
+            <input type="checkbox" id="repeat-checkbox" />
+            Repeat
+          </label>
+        </div>
       </div>
     </section>
-  </main>
+  </div>
 
-  <!-- Progress bar section at bottom -->
+  <!-- Progress bar pinned to the bottom of the screen -->
   <section id="progress-section">
     <div id="progress-controls">
-      <!-- 10s backward/forward -->
       <button id="backward-btn">-10s</button>
       <button id="forward-btn">+10s</button>
     </div>
